force-app/main/default/objects/SBQQ__UsageRate__c/fields/SBQQ__Price__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Price__c</fullName>
    <inlineHelpText>Price for the active currency. Use this field in multi-currency orgs.</inlineHelpText>
    <label>Price</label>
    <precision>14</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>