force-app/main/default/objects/SBQQ__UsageRate__c/fields/SBQQ__PriceType__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PriceType__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>