force-app/main/default/objects/SBQQ__UsageRate__c/fields/SBQQ__UsageRateCard__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UsageRateCard__c</fullName>
    <inlineHelpText>Parent usage rate card for this usage rate</inlineHelpText>
    <label>Usage Rate Card</label>
    <referenceTo>SBQQ__UsageRateCard__c</referenceTo>
    <relationshipLabel>Usage Rates</relationshipLabel>
    <relationshipName>UsageRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>